part3:RETRIEVE DATA FROM DOCUMENT

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,4 +28,17 @@
         android:onClick="saveNote"
         android:text="Save" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="loadNote"
+        android:text="Load" />
+
+    <TextView
+        android:id="@+id/tv_load"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:textSize="20sp"
+        android:text=""/>
+
 </LinearLayout>
