part5:SetOptions.merge and the update method to update single fields

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,12 @@
         android:onClick="loadNote"
         android:text="Load" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="updateDescription"
+        android:text="Update description" />
+
     <TextView
         android:id="@+id/tv_load"
         android:layout_height="wrap_content"
