--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,13 @@
         android:hint="Priority"
         android:inputType="number" />
 
+    <EditText
+        android:id="@+id/edit_text_tag"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Tag"
+        android:inputType="text" />
+
     <Button
         android:visibility="gone"
         android:layout_width="match_parent"
